# app_bible

./: .clang-format  .gitignore  CMakeLists.txt  README.md
app_bible_assistant/: CMakeLists.txt
app_bible_assistant/cmake/: copy_target_files.cmake
app_bible_assistant/res/: app_bible_assistant.exe.manifest  resource.rc  resource.rc.in  version.hpp.in
app_bible_assistant/setup/: setup.iss
app_bible_assistant/src/: main.cpp  version.hpp
app_bible_workspace/: CMakeLists.txt
app_bible_workspace/html/: main.html
app_bible_workspace/res/: app_bible_workspace.manifest  resource.rc  resource.rc.in  version.hpp.in
app_bible_workspace/setup/: setup.iss
app_bible_workspace/src/: main.cpp  version.hpp
bibstd/: CMakeLists.txt
bibstd/app_framework/: active_worker.cpp  active_worker.hpp  main_loop.cpp  main_loop.hpp  settings_base.cpp  settings_base.hpp  single_worker.cpp  single_worker.hpp  task_queue.cpp  task_queue.hpp  thread_pool.cpp  thread_pool.hpp
bibstd/bible/: bible_book.hpp  bible_book_name_variants_de.hpp  book_name_variants_de.hpp  common.cpp  common.hpp  reference.cpp  reference.hpp  reference_formatter.cpp  reference_formatter.hpp  reference_parser.cpp  reference_parser.hpp  reference_range.cpp  reference_range.hpp
bibstd/core/: core_bible_reference.cpp  core_bible_reference.hpp  core_bible_reference_ocr.cpp  core_bible_reference_ocr.hpp  core_bible_reference_ocr_common.hpp  core_bibleserver_lookup.cpp  core_bibleserver_lookup.hpp  core_settings.cpp  core_settings.hpp  core_settings_common.hpp  core_tesseract.cpp  core_tesseract.hpp  core_tesseract_common.hpp
bibstd/data/: pix.cpp  pix.hpp  pixel.hpp  plane.hpp  save_as_bitmap.cpp  save_as_bitmap.hpp
bibstd/io/: key_input_handler.cpp  key_input_handler.hpp
bibstd/math/: arithmetic.hpp  coordinates.hpp  is_equal.hpp  rect.hpp  sign.hpp  valid_floating_point.hpp  value_range.hpp
bibstd/meta/: chrono.hpp  contains.hpp  convert_if.hpp  for_each.hpp  pack.hpp  type_traits.hpp
bibstd/system/: cursor.hpp  cursor_base.hpp  cursor_windows.hpp  filesystem.hpp  filesystem_base.hpp  filesystem_windows.hpp  hotkey.hpp  hotkey_base.hpp  hotkey_windows.hpp  message_handler.hpp  message_handler_windows.hpp  open_browser.hpp  open_browser_windows.hpp  screen.hpp  screen_base.hpp  screen_capture.hpp  screen_capture_base.hpp  screen_capture_windows.hpp  screen_windows.hpp  tray.cpp  tray.hpp  tray_base.hpp  tray_windows.hpp  windows.hpp
bibstd/txt/: chars.hpp  find_uint.hpp  indexed_strings.cpp  indexed_strings.hpp  whitespaces.hpp
bibstd/util/: bitmap.cpp  bitmap.hpp  boost_numeric_cast.hpp  characters.hpp  const_bimap.hpp  contains.hpp  date.hpp  enum.hpp  enum_helpers.hpp  exception.hpp  format.hpp  incbin.hpp  log.cpp  log.hpp  non_copyable.hpp  non_owning_ptr.hpp  optimize_helper.hpp  property.hpp  property_parser.hpp  property_tree.cpp  property_tree.hpp  scoped_counter.cpp  scoped_counter.hpp  scoped_guard.cpp  scoped_guard.hpp  screen_types.hpp  signals.cpp  signals.hpp  string.hpp  string_view.hpp  uid.hpp  visit_helper.hpp
bibstd/visual/: webui.hpp
bibstd/workflow/: workflow_bible_reference_ocr.cpp  workflow_bible_reference_ocr.hpp
bibstd_test/: CMakeLists.txt
bibstd_test/bible/: reference_parser.cpp
bibstd_test/core/: core_bible_reference.cpp
bibstd_test/math/: arithmetic.cpp  value_range.cpp
doc/: .$workflow_reference_parser.drawio.bkp  setup_ide.md  workflow_reference_parser.drawio
libs_external/: CMakeLists.txt
libs_external/incbin/: CMakeLists.txt
libs_external/magic_enum/: CMakeLists.txt
libs_external/traypp/: CMakeLists.txt
libs_external/traypp/example/simple/: CMakeLists.txt  main.cpp
libs_external/traypp/tray/include/: tray.hpp
libs_external/traypp/tray/include/components/: button.hpp  imagebutton.hpp  label.hpp  separator.hpp  submenu.hpp  syncedtoggle.hpp  toggle.hpp
libs_external/traypp/tray/include/core/: entry.hpp  icon.hpp  image.hpp  tray.hpp  traybase.hpp
libs_external/traypp/tray/include/core/linux/: tray.hpp
libs_external/traypp/tray/include/core/windows/: tray.hpp
libs_external/traypp/tray/src/components/: button.cpp  imagebutton.cpp  label.cpp  separator.cpp  submenu.cpp  syncedtoggle.cpp  toggle.cpp
libs_external/traypp/tray/src/core/: entry.cpp  icon.cpp  image.cpp  tray.cpp  traybase.cpp
libs_external/traypp/tray/src/core/linux/: icon.cpp  image.cpp  tray.cpp
libs_external/traypp/tray/src/core/windows/: icon.cpp  tray.cpp
libs_external/webui/: CMakeLists.txt  setup_webui.md
tools/: open_vs_code.ps1  open_vscode_with_msvs.bat  setup_ide.md
tools/cmake/: FindInnoSetup.cmake  generate_inno_setup.cmake  helper_functions.cmake  install_app_bible_workspace.cmake  set_mingw_path_variables.cmake
